# supply-chain-ml-project

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb
src/data/: data_manager.py
